# TreeProgrammingLanguage

./: CMakeLists.txt  README.md  main.c
core/: ast.c  ast.h  lexer.c  lexer.h  lexer_tests.c  lexer_tests.h  parser.c  parser.h  repl.c  repl.h  token.c  token.h  utilities.c  utilities.h
tests/: lexer_tests.c  lexer_tests.h  statement_tests.c  statement_tests.h
